Add Titanfall & Titanfall 2, update..
Northstar, R5Reloaded Readmes and scripts.

--- a/lutris-scripts/Titanfall 2/EA App/titanfall-2-client-ea-app.json
+++ b/lutris-scripts/Titanfall 2/EA App/titanfall-2-client-ea-app.json
@@ -6,17 +6,17 @@
     {
       "id": "",
       "game_id": "",
-      "game_slug": "northstar-client",
-      "name": "Northstar",
+      "game_slug": "titanfall-2",
+      "name": "Titanfall 2",
       "year": 2021,
       "user": "begin-theadventure",
       "runner": "wine",
-      "slug": "northstar-ea-app",
+      "slug": "titanfall-2-ea-app",
       "version": "EA App",
-      "description": "You might want to remove northstar-client folder under ~/.cache/lutris/installer directory after installation.\nImage pack is here: https://github.com/begin-theadventure/lutris-scripts/blob/main/Northstar/images/NorthstarImagesLutris\nLink to the GitHub repo: https://github.com/begin-theadventure/lutris-scripts/tree/main/Northstar",
+      "description": "You might want to remove titanfall-2 folder under ~/.cache/lutris/installer directory after installation.\nLink to the GitHub repo: https://github.com/begin-theadventure/lutris-scripts/tree/main/lutris-scripts/Titanfall%202",
       "notes": "",
       "credits": "",
-      "created_at": "2022-12-26T00:00:00.400000Z",
+      "created_at": "2022-12-29T00:00:00.400000Z",
       "updated_at": "2022-12-29T00:00:00.400000Z",
       "draft": false,
       "published": false,
@@ -81,8 +81,7 @@
           },
           {
             "task": {
-              "app": "nocrashdialog faudio vcrun2010 vcrun2013 vcrun2015 win10 liberation d3dcompiler_47",
-              "description": "Installing dependencies..",
+              "app": "arial nocrashdialog faudio vcrun2010 vcrun2013 vcrun2015 win10 liberation d3dcompiler_47",
               "arch": "win64",
               "name": "winetricks",
               "prefix": "$GAMEDIR"
@@ -119,7 +118,7 @@
             "DXVK_STATE_CACHE_PATH": "$GAMEDIR/dxvk-cache",
             "STAGING_SHARED_MEMORY": 0
           },
-          "exclude_processes": "QtWebEngineProcess.exe"
+          "exclude_processes": "QtWebEngineProcess.exe ActivationUI.exe"
         },
         "wine": {
           "dxvk": true,
