--- a/lutris-scripts/R5Reloaded/EA App/r5reloaded-ea-app.json
+++ b/lutris-scripts/R5Reloaded/EA App/r5reloaded-ea-app.json
@@ -17,7 +17,7 @@
       "notes": "",
       "credits": "",
       "created_at": "2022-12-26T00:00:00.400000Z",
-      "updated_at": "2022-12-26T00:00:00.400000Z",
+      "updated_at": "2022-12-29T00:00:00.400000Z",
       "draft": false,
       "published": false,
       "published_by": ,
@@ -43,7 +43,7 @@
           {
             "task": {
               "arch": "win64",
-              "description": "Creating Wine prefix",
+              "description": "Creating Wine prefix..",
               "name": "create_prefix",
               "prefix": "$GAMEDIR"
             }
@@ -81,7 +81,8 @@
           },
           {
             "task": {
-              "app": "nocrashdialog arial vcrun2017 win10 liberation d3dcompiler_47",
+              "app": "nocrashdialog vcrun2017 win10 liberation d3dcompiler_47",
+              "description": "Installing dependencies..",
               "arch": "win64",
               "name": "winetricks",
               "prefix": "$GAMEDIR"
@@ -91,7 +92,7 @@
             "task": {
               "arch": "win64",
               "args": "/silent",
-              "description": "Installing EA App..",
+              "description": "Installing the EA App..",
               "exclude_processes": "EADesktop.exe EABackgroundService.exe EALocalHostSvc.exe QtWebEngineProcess.exe explorer.exe explorer.exe winedbg.exe",
               "executable": "client",
               "name": "wineexec",
