--- a/lutris-scripts/Titanfall/EA App/titanfall-ea-app.json
+++ b/lutris-scripts/Titanfall/EA App/titanfall-ea-app.json
@@ -4,25 +4,25 @@
   "previous": null,
   "results": [
     {
-      "id": "",
-      "game_id": "",
-      "game_slug": "northstar-client",
-      "name": "Northstar",
-      "year": 2021,
+      "id": 32197,
+      "game_id": 17620,
+      "game_slug": "titanfall",
+      "name": "Titanfall",
+      "year": 2014,
       "user": "begin-theadventure",
       "runner": "wine",
-      "slug": "northstar-ea-app",
+      "slug": "titanfall-ea-app",
       "version": "EA App",
-      "description": "You might want to remove northstar-client folder under ~/.cache/lutris/installer directory after installation.\nImage pack is here: https://github.com/begin-theadventure/lutris-scripts/blob/main/Northstar/images/NorthstarImagesLutris\nLink to the GitHub repo: https://github.com/begin-theadventure/lutris-scripts/tree/main/Northstar",
+      "description": "You might want to remove titanfall folder under ~/.cache/lutris/installer directory after installation.\nImage pack is here: https://github.com/begin-theadventure/lutris-scripts/blob/main/lutris-scripts/Titanfall/TitanfallIconLutris\nLink to the GitHub repo: https://github.com/begin-theadventure/lutris-scripts/tree/main/lutris-scripts/Titanfall",
       "notes": "",
       "credits": "",
-      "created_at": "2022-12-26T00:00:00.400000Z",
+      "created_at": "2022-12-29T00:00:00.400000Z",
       "updated_at": "2022-12-29T00:00:00.400000Z",
       "draft": false,
       "published": false,
       "published_by": ,
       "rating": "",
-      "steamid": ,
+      "steamid": 1454890,
       "gogid": null,
       "gogslug": "",
       "humbleid": "",
@@ -59,29 +59,14 @@
             }
           },
           {
-            "input_menu": {
-              "description": "Setting DXVK config, choose your GPU.",
-              "id": "GPU",
-              "options": [
-                {
-                  "dxgi.maxFrameLatency = 1": "AMD"
-                },
-                {
-                  "dxgi.nvapiHack = False\ndxgi.maxFrameLatency = 1": "NVIDIA"
-                }
-              ],
-              "preselect": "dxgi.maxFrameLatency = 1"
-            }
-          },
-          {
             "write_file": {
-              "content": "$INPUT_GPU",
+              "content": "",
               "file": "$GAMEDIR/dxvk.conf"
             }
           },
           {
             "task": {
-              "app": "nocrashdialog faudio vcrun2010 vcrun2013 vcrun2015 win10 liberation d3dcompiler_47",
+              "app": "nocrashdialog vcrun2010 win10",
               "description": "Installing dependencies..",
               "arch": "win64",
               "name": "winetricks",
@@ -119,7 +104,7 @@
             "DXVK_STATE_CACHE_PATH": "$GAMEDIR/dxvk-cache",
             "STAGING_SHARED_MEMORY": 0
           },
-          "exclude_processes": "QtWebEngineProcess.exe"
+          "exclude_processes": "QtWebEngineProcess.exe ActivationUI.exe"
         },
         "wine": {
           "dxvk": true,
