--- a/lutris-scripts/Titanfall/EA App/titanfall-ea-app.json
+++ b/lutris-scripts/Titanfall/EA App/titanfall-ea-app.json
@@ -13,7 +13,7 @@
       "runner": "wine",
       "slug": "titanfall-ea-app",
       "version": "EA App",
-      "description": "You might want to remove titanfall folder under ~/.cache/lutris/installer directory after installation.\nImage pack is here: https://github.com/begin-theadventure/lutris-scripts/blob/main/lutris-scripts/Titanfall/TitanfallIconLutris\nLink to the GitHub repo: https://github.com/begin-theadventure/lutris-scripts/tree/main/lutris-scripts/Titanfall",
+      "description": "You might want to remove titanfall folder under ~/.cache/lutris/installer directory after installation.\nLink to the GitHub repo: https://github.com/begin-theadventure/lutris-scripts/tree/main/lutris-scripts/Titanfall",
       "notes": "",
       "credits": "",
       "created_at": "2022-12-29T00:00:00.400000Z",
@@ -66,7 +66,7 @@
           },
           {
             "task": {
-              "app": "nocrashdialog vcrun2010 win10",
+              "app": "nocrashdialog vcrun2010 win10 liberation d3dcompiler_47",
               "description": "Installing dependencies..",
               "arch": "win64",
               "name": "winetricks",
