--- a/lutris-scripts/Titanfall/Steam/EA App/titanfall-steam-ea-app.json
+++ b/lutris-scripts/Titanfall/Steam/EA App/titanfall-steam-ea-app.json
@@ -11,8 +11,8 @@
       "year": 2014,
       "user": "begin-theadventure",
       "runner": "wine",
-      "slug": "titanfall-origin",
-      "version": "Origin",
+      "slug": "titanfall-steam-ea-app",
+      "version": "Steam with EA App",
       "description": "You might want to remove titanfall folder under ~/.cache/lutris/installer directory after installation.\nLink to the GitHub repo: https://github.com/begin-theadventure/lutris-scripts/tree/main/lutris-scripts/Titanfall",
       "notes": "",
       "credits": "",
@@ -31,12 +31,15 @@
       "script": {
         "files": [
           {
-            "client": "https://download.dm.origin.com/origin/live/OriginSetup.exe"
+            "client": "https://cdn.steamstatic.com/client/installer/SteamSetup.exe"
+          },
+          {
+            "client2": "https://origin-a.akamaihd.net/EA-Desktop-Client-Download/installer-releases/EAappInstaller.exe"
           },
         ],
         "game": {
           "arch": "win64",
-          "exe": "drive_c/Program Files (x86)/Origin/Origin.exe",
+          "exe": "drive_c/Program Files (x86)/Steam/Steam.exe",
           "prefix": "$GAMEDIR"
         },
         "installer": [
@@ -66,7 +69,7 @@
           },
           {
             "task": {
-              "app": "arial nocrashdialog vcrun2010 win10",
+              "app": "nocrashdialog vcrun2010 win10 liberation d3dcompiler_47",
               "description": "Installing dependencies..",
               "arch": "win64",
               "name": "winetricks",
@@ -77,9 +80,20 @@
             "task": {
               "arch": "win64",
               "args": "/silent",
-              "description": "Installing Origin..",
-              "exclude_processes": "Origin.exe OriginClientService.exe OriginWebHelperService.exe QtWebEngineProcess.exe explorer.exe winedbg.exe OriginER.exe",
+              "description": "Installing Steam.. Uncheck Run Steam and click Finish.",
+              "exclude_processes": "",
               "executable": "client",
+              "name": "wineexec",
+              "prefix": "$GAMEDIR"
+            }
+          },
+          {
+            "task": {
+              "arch": "win64",
+              "args": "/silent",
+              "description": "Installing the EA App..",
+              "exclude_processes": "EADesktop.exe EABackgroundService.exe EALocalHostSvc.exe QtWebEngineProcess.exe explorer.exe explorer.exe winedbg.exe",
+              "executable": "client2",
               "name": "wineexec",
               "prefix": "$GAMEDIR"
             }
@@ -104,7 +118,7 @@
             "DXVK_STATE_CACHE_PATH": "$GAMEDIR/dxvk-cache",
             "STAGING_SHARED_MEMORY": 0
           },
-          "exclude_processes": "QtWebEngineProcess.exe ActivationUI.exe OriginWebHelperService.exe"
+          "exclude_processes": "QtWebEngineProcess.exe ActivationUI.exe"
         },
         "wine": {
           "dxvk": true,
