--- a/lutris-scripts/Titanfall/EA App/titanfall-ea-app.json
+++ b/lutris-scripts/Titanfall/EA App/titanfall-ea-app.json
@@ -43,7 +43,7 @@
           {
             "task": {
               "arch": "win64",
-              "description": "Creating Wine prefix..",
+              "description": "Creating a Wine prefix..",
               "name": "create_prefix",
               "prefix": "$GAMEDIR"
             }
