--- a/lutris-scripts/Titanfall/Steam/EA App/titanfall-steam-ea-app.json
+++ b/lutris-scripts/Titanfall/Steam/EA App/titanfall-steam-ea-app.json
@@ -46,7 +46,7 @@
           {
             "task": {
               "arch": "win64",
-              "description": "Creating Wine prefix..",
+              "description": "Creating a Wine prefix..",
               "name": "create_prefix",
               "prefix": "$GAMEDIR"
             }
