Northstar: DLL override & tutorials.
Add a DLL override to allow launching with `-northstar` instead of renaming the exectuables (Origin and Steam with Origin/EA App) + edit tutorials (N*, TF|1/2).

--- a/lutris-scripts/Northstar/Steam/EA App/northstar-client-steam-ea-app.json
+++ b/lutris-scripts/Northstar/Steam/EA App/northstar-client-steam-ea-app.json
@@ -139,6 +139,7 @@
           "dxvk": true,
           "overrides": {
             "nvapi,nvapi64": "disabled",
+            "wsock32": "native,builtin",
             "xaudio2_7": "native,builtin"
           }
         }
