--- a/lutris-scripts/Northstar/EA App/northstar-client-ea-app.json
+++ b/lutris-scripts/Northstar/EA App/northstar-client-ea-app.json
@@ -13,7 +13,7 @@
       "runner": "wine",
       "slug": "northstar-ea-app",
       "version": "EA App",
-      "description": "You might want to remove northstar-client folder under ~/.cache/lutris/installer directory after installation.\nImage pack is here: https://github.com/begin-theadventure/lutris-scripts/blob/main/Northstar/images/NorthstarImagesLutris\nLink to the GitHub repo: https://github.com/begin-theadventure/lutris-scripts/tree/main/Northstar",
+      "description": "Image pack is here: https://github.com/begin-theadventure/lutris-scripts/blob/main/Northstar/images/NorthstarImagesLutris\nLink to the GitHub repo: https://github.com/begin-theadventure/lutris-scripts/tree/main/Northstar",
       "notes": "",
       "credits": "",
       "created_at": "2022-12-26T00:00:00.400000Z",
@@ -111,7 +111,6 @@
           "env": {
             "__GL_SHADER_DISK_CACHE_SKIP_CLEANUP": 1,
             "__GL_SHADER_DISK_CACHE_SIZE": 1000000000,
-            "__GL_SHADER_DISK_CACHE_PATH": "$GAMEDIR",
             "__GL_SHADER_DISK_CACHE_PATH": "$GAMEDIR/nv-shaders",
             "MESA_SHADER_CACHE_DIR": "$GAMEDIR/mesa-shaders",
             "DXVK_HUD": "compiler",
