--- a/lutris-scripts/R5Reloaded/EA App/r5reloaded-ea-app.json
+++ b/lutris-scripts/R5Reloaded/EA App/r5reloaded-ea-app.json
@@ -13,7 +13,7 @@
       "runner": "wine",
       "slug": "r5reloaded-ea-app",
       "version": "EA App",
-      "description": "You might want to remove r5reloaded folder under ~/.cache/lutris/installer directory after installation.\nImage pack is here: https://github.com/begin-theadventure/lutris-scripts/tree/main/lutris-scripts/R5Reloaded/images\nLink to the GitHub repo: https://github.com/begin-theadventure/lutris-scripts/tree/main/lutris-scripts/R5Reloaded",
+      "description": "Image pack is here: https://github.com/begin-theadventure/lutris-scripts/tree/main/lutris-scripts/R5Reloaded/images\nLink to the GitHub repo: https://github.com/begin-theadventure/lutris-scripts/tree/main/lutris-scripts/R5Reloaded",
       "notes": "",
       "credits": "",
       "created_at": "2022-12-26T00:00:00.400000Z",
@@ -111,7 +111,6 @@
           "env": {
             "__GL_SHADER_DISK_CACHE_SKIP_CLEANUP": 1,
             "__GL_SHADER_DISK_CACHE_SIZE": 1000000000,
-            "__GL_SHADER_DISK_CACHE_PATH": "$GAMEDIR",
             "__GL_SHADER_DISK_CACHE_PATH": "$GAMEDIR/nv-shaders",
             "MESA_SHADER_CACHE_DIR": "$GAMEDIR/mesa-shaders",
             "DXVK_HUD": "compiler",
