--- a/lutris-scripts/Northstar/EA App/northstar-client-ea-app.json
+++ b/lutris-scripts/Northstar/EA App/northstar-client-ea-app.json
@@ -124,6 +124,7 @@
           "dxvk": true,
           "overrides": {
             "nvapi,nvapi64": "disabled",
+            "wsock32": "native,builtin",
             "xaudio2_7": "native,builtin"
           }
         }
