--- a/lutris-scripts/Titanfall 2/EA App/titanfall-2-ea-app.json
+++ b/lutris-scripts/Titanfall 2/EA App/titanfall-2-ea-app.json
@@ -17,12 +17,12 @@
       "notes": "",
       "credits": "",
       "created_at": "2022-12-29T00:00:00.400000Z",
-      "updated_at": "2022-01-27T00:00:00.400000Z",
+      "updated_at": "2022-02-26T00:00:00.400000Z",
       "draft": false,
       "published": false,
       "published_by": ,
       "rating": "",
-      "steamid": ,
+      "steamid": 1237970,
       "gogid": null,
       "gogslug": "",
       "humbleid": "",
