--- a/lutris-scripts/Northstar/EA App/northstar-client-ea-app.json
+++ b/lutris-scripts/Northstar/EA App/northstar-client-ea-app.json
@@ -17,7 +17,7 @@
       "notes": "",
       "credits": "",
       "created_at": "2022-12-26T00:00:00.400000Z",
-      "updated_at": "2023-02-13T00:00:00.400000Z",
+      "updated_at": "2023-03-29T00:00:00.400000Z",
       "draft": false,
       "published": false,
       "published_by": ,
@@ -59,23 +59,8 @@
             }
           },
           {
-            "input_menu": {
-              "description": "Setting DXVK config, choose your GPU.",
-              "id": "GPU",
-              "options": [
-                {
-                  "dxgi.maxFrameLatency = 1": "AMD"
-                },
-                {
-                  "dxgi.nvapiHack = False\ndxgi.maxFrameLatency = 1": "NVIDIA"
-                }
-              ],
-              "preselect": "dxgi.maxFrameLatency = 1"
-            }
-          },
-          {
             "write_file": {
-              "content": "$INPUT_GPU",
+              "content": "dxgi.nvapiHack = False",
               "file": "$GAMEDIR/dxvk.conf"
             }
           },
@@ -115,8 +100,7 @@
             "MESA_SHADER_CACHE_DIR": "$GAMEDIR/mesa-shaders",
             "DXVK_HUD": "compiler",
             "DXVK_CONFIG_FILE": "$GAMEDIR/dxvk.conf",
-            "DXVK_STATE_CACHE_PATH": "$GAMEDIR/dxvk-cache",
-            "STAGING_SHARED_MEMORY": 0
+            "DXVK_STATE_CACHE_PATH": "$GAMEDIR/dxvk-cache"
           },
           "exclude_processes": "QtWebEngineProcess.exe"
         },
