--- a/lutris-scripts/Northstar/Steam/EA App/northstar-client-steam-ea-app.json
+++ b/lutris-scripts/Northstar/Steam/EA App/northstar-client-steam-ea-app.json
@@ -17,7 +17,7 @@
       "notes": "",
       "credits": "",
       "created_at": "2022-12-28T00:00:00.400000Z",
-      "updated_at": "2023-03-29T00:00:00.400000Z",
+      "updated_at": "2023-05-19T00:00:00.400000Z",
       "draft": false,
       "published": false,
       "published_by": ,
@@ -116,7 +116,7 @@
             "DXVK_CONFIG_FILE": "$GAMEDIR/dxvk.conf",
             "DXVK_STATE_CACHE_PATH": "$GAMEDIR/dxvk-cache"
           },
-          "exclude_processes": "QtWebEngineProcess.exe"
+          "exclude_processes": "QtWebEngineProcess.exe ActivationUI.exe"
         },
         "wine": {
           "dxvk": true,
