--- a/lutris-scripts/Titanfall/Steam/EA App/titanfall-steam-ea-app.json
+++ b/lutris-scripts/Titanfall/Steam/EA App/titanfall-steam-ea-app.json
@@ -17,7 +17,7 @@
       "notes": "",
       "credits": "",
       "created_at": "2022-12-29T00:00:00.400000Z",
-      "updated_at": "2023-03-29T00:00:00.400000Z",
+      "updated_at": "2023-05-19T00:00:00.400000Z",
       "draft": false,
       "published": false,
       "published_by": ,
@@ -92,7 +92,7 @@
               "arch": "win64",
               "args": "/silent",
               "description": "Installing the EA App..",
-              "exclude_processes": "EADesktop.exe EABackgroundService.exe EALocalHostSvc.exe QtWebEngineProcess.exe explorer.exe explorer.exe winedbg.exe",
+              "exclude_processes": "EADesktop.exe EABackgroundService.exe EALocalHostSvc.exe QtWebEngineProcess.exe explorer.exe winedbg.exe",
               "executable": "client2",
               "name": "wineexec",
               "prefix": "$GAMEDIR"
